--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^20.10.5",
+    "@types/pg": "^8.10.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "pg": "^8.11.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
